--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,14 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "xstring": "cpp",
+        "list": "cpp",
+        "xhash": "cpp",
+        "xlocinfo": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp",
+        "climits": "cpp",
+        "unordered_set": "cpp"
     }
 }
